--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "autoprefixer": "^10.4.22",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.32.0",
+    "drizzle-orm": "^0.32.2",
     "lucide-react": "^0.407.0",
     "next": "14.2.4",
-    "postgres": "^3.4.4",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "stripe": "^16.2.0",
@@ -40,11 +40,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "drizzle-kit": "^0.23.0",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.23.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
